--- a/templates/index.html
+++ b/templates/index.html
@@ -37,6 +37,6 @@
         <pre id="reveal_result"></pre>
     </div>
 
-    <script src="{{ url_for('static', filename='main.js') }}"></script>
+    <script src="{{ url_for('static', filename='script.js') }}"></script>
 </body>
 </html>
