--- a/templates/index.html
+++ b/templates/index.html
@@ -14,8 +14,8 @@
         <input type="text" id="players" placeholder="Joueurs (séparés par ,)">
         <select id="rule">
             <option value="strict">Strict</option>
-            <option value="median">Médiane</option>
-            <option value="average">Moyenne</option>
+            <option value="mediane">Médiane</option>
+            <option value="moyenne">Moyenne</option>
         </select>
         <button onclick="createSession()">Créer</button>
         <p id="create_result"></p>
